--- a/students/GamboaJ_2014.html
+++ b/students/GamboaJ_2014.html
@@ -27,7 +27,7 @@
 	<div class="jumbotron">
       <div class="container">
  <div class="mugshot">
-          <img src="../pics/jessica.jpg" height = 200px>
+          <img src="https://dl.dropboxusercontent.com/u/15432916/8Continuation_2014/pics/jessica.jpg" height = 200px>
         </div>
         <h1>Jessica Gamboa</h1>
         <p>After graduating college, I want to become a CSI Investigator</p>
