--- a/students/GamboaJ_2014.html
+++ b/students/GamboaJ_2014.html
@@ -13,8 +13,8 @@
     <div class="nav">
       <div class="container">
         <ul class="pull-left">
-          <li><a href="#">Continuation Home</a></li>
-          <li><a href="#">Student List</a></li>
+          <li><a href="../index.html">Continuation Home</a></li>
+          <li><a href="studentList.html">Student List</a></li>
         </ul>
         <ul class="pull-right">
           <li><a href="www.centennialschool.net">Centennial Home</a></li>
@@ -24,12 +24,14 @@
       </div>
     </div>
 
-	<div class="jumbotron">
+    <div class="jumbotron">
       <div class="container">
- <div class="mugshot">
-          <img src="https://dl.dropboxusercontent.com/u/15432916/8Continuation_2014/pics/jessica.jpg" height = 200px>
+      <div class="mugshot">
+          <img src="http://1.bp.blogspot.com/-metPBQN2Mxc/T8UJ_oCDN9I/AAAAAAAABwE/hMjjcqPT9tY/s1600/baby+monkey.jpg" height = 200px>
         </div>
-        <h1>Jessica Gamboa</h1>
+		
+		
+      <h1>Jessica Gamboa</h1>
         <p>After graduating college, I want to become a CSI Investigator</p>
 
       </div>
@@ -52,12 +54,6 @@
 			<p>My interest in life are kinda different than others in the school. In life I would like to go to college to go and be a CSI Investigator. I would also like to go to college and get a volleyball career. I would like to have a volleyball career for multiple reasons. One, because I love the sport a lot. Two, because volleyball is an awesome sport to have fun with your friends and its a very competitive sport. I would also like to go and play with girls that are very good at it and that I can learn from.</p>
 		<p> CSI  Investigator is another thing I would love to be. I think its the best job out there for me. I like it because I get to be out there investigating crime scenes. I get to find out who the murderer is and find clues. My academics in college would be math, english, and science. I would need all three of the things to be a CSI Investigator. A CSI  Investigator and a Volleyball creere are things that I would like to do in my future.</p>
 
-		<br>
-		<br>
-		<h3>Most Memorable Event</h3>
-			<p>This year isn't over yet, but its definitely been the best year in junior high. Most of the good memories were from sports. This one time for volleyball we were playing against Centauri, we were so close to beating them. Then for the last round we lost. We were all very sad that we lost. At first we were undefeated then when we lost to Centauri. Mariah, Ayla, and I had a very good last year in junior high in volleyball, we had lots of fun. We would all like to thank Roberta for making this a good volleyball year. </p>
-      <p> When basketball season started we kinda started off to a good start. Mariah and I were very close, we were like partners in crime for basketball. For our 4th game against Sanford I had hurt my knee, and it wasn’t even for a game that counted it was just a scrimmage. That next day I went to the doctor, she had told me that I wasn’t going to be able to play for the rest of the year. When she told me that I started to cry.  </p>
-        <p> When I told Mariah that I couldn’t play, we were both pretty sad. That Thursday we had a game against Garland, and that game was pretty important to us. Every time, the time would get closer for the eighth graders to play Mariah and I started to cry. We would just sit there and look at each other and start to cry again. That was the first game in all season that we weren’t going to be able to play with each other. Then when tournaments came around I got to play for the last two games. I was very excited and really scared that I was going to hurt my knee again.   This is the most memorable thing thats happened to me this year.<p>
 			
 	      </div>
 		  <div class="col-\md-4"> 
@@ -71,11 +67,16 @@
 		  </div>
 <div class="col-md-4"> 
 
+			<h3>Most Memorable Event</h3>
+			<p>This year isn’t over yet, but its definitely been the best year in junior high. Most of the good memories were from sports. This one time for volleyball we were playing against Centauri, we were so close to beating them. Then for the last round we lost. We were all very sad that we lost. At first we were undefeated then when we lost to Centauri. Mariah, Ayla, and I had a very good last year in junior high in volleyball, we had lots of fun. We would all like to thank Roberta for making this a good volleyball year. </p>
+      <p> When basketball season started we kinda started off to a good start. Mariah and I were very close, we were like partners in crime for basketball. For our 4th game against Sanford I had hurt my knee, and it wasn’t even for a game that counted it was just a scrimmage. That next day I went to the doctor, she had told me that I wasn’t going to be able to play for the rest of the year. When she told me that I started to cry.  </p>
+        <p> When I told Mariah that I couldn’t play, we were both pretty sad. That Thursday we had a game against Garland, and that game was pretty important to us. Every time, the time would get closer for the eighth graders to play Mariah and I started to cry. We would just sit there and look at each other and start to cry again. That was the first game in all season that we weren’t going to be able to play with each other. Then when tournaments came around I got to play for the last two games. I was very excited and really scared that I was going to hurt my knee again.   This is the most memorable thing thats happened to me this year.<p>
+			
+
+			
 		  </div>
 	    </div>
 	  </div>
 	</div>
   </body>
 </html>
-
-
