--- a/students/ChambersS_2014.html
+++ b/students/ChambersS_2014.html
@@ -13,8 +13,8 @@
     <div class="nav">
       <div class="container">
         <ul class="pull-left">
-          <li><a href="#">Continuation Home</a></li>
-          <li><a href="#">Student List</a></li>
+          <li><a href="../index.html">Continuation Home</a></li>
+          <li><a href="studentList.html">Student List</a></li>
         </ul>
         <ul class="pull-right">
           <li><a href="www.centennialschool.net">Centennial Home</a></li>
@@ -26,7 +26,12 @@
 
     <div class="jumbotron">
       <div class="container">
-        <h1>Stormy Sky</h1>
+      <div class="mugshot">
+          <img src="http://1.bp.blogspot.com/-metPBQN2Mxc/T8UJ_oCDN9I/AAAAAAAABwE/hMjjcqPT9tY/s1600/baby+monkey.jpg" height = 200px>
+        </div>
+	  
+	  
+     <h1>Stormy Sky</h1>
         <p>After I graduate I want to go to juilliard college.</p>
         <a href="http://www.juilliard.edu/degrees-programs/music?destination=node/11430">Learn More about my future career</a>
       </div>
@@ -37,25 +42,25 @@
 		<div class="row">
 	  	  <div class="col-md-4">
 			<h3> Family</h3>
-			<p>I have a very crazy fun Family. My family is really loud and fun to be around.We are told that we are a very unique family. My family Loves to party all the time. We try to live our lives to the fullest.
-My family is also nice and loving. we try to stay strong and make sure we are all happy. My family has a very strong relationship. We never leave each other behind.</p>
-			<p><a href="#">See how to travel on Airbnb</a></p>
+			<p>I have a very crazy fun Family. My family is really loud and fun to be around. We are told that we are a very unique family. My family Loves to party all the time. We try to live our lives to the fullest.
+My family is also nice and loving. We try to stay strong and make sure we are all happy. My family has a very strong relationship. We never leave each other behind.</p>
+			
 		  </div>
 		  <div class="col-md-4">
 			<h3>Interest</h3>
-			<p>I like being fun and nice. I can also be a little crazy. But thats what I like doing. I have a lot of hobbies. One of my hobbies is Playing and making music. I have always loved music. I have played piano since I was 9 years old. Piano was not the only instrument I played though. But it was my favorite. I also like to ride with my brother and dad. My favorite Subjects are Math, Science, and wood shop. ALl of these subjects are amazing.</p>
-			<p><a href="#">Learn more about hosting</a></p>
+			<p>I like being fun and nice. I can also be a little crazy. But thats what I like doing. I have a lot of hobbies. One of my hobbies is Playing and making music. I have always loved music. I have played piano since I was 9 years old. Piano was not the only instrument I played though, But it was my favorite. I also like to ride with my brother and dad. My favorite Subjects are Math, Science, and wood shop. ALl of these subjects are amazing.</p>
+			
 	      </div>
 		  <div class="col-md-4">
 			<h3>Success path</h3>
-			<p>I have a lot of goals to reach in my life. My first goal Is graduating High school. My next goal is to go to college. After i want to graduate college. Lastly I want to become a . 
+			<p>I have a lot of goals to reach in my life. My first goal Is graduating High school. My next goal is to go to college. After i want to graduate college. Lastly I want to become a Musician.
+ First I need to graduate high school. I have to finish high school because I would need a back up plan High school would also further my education. If your education is furthered you have a better chance of succeeding. That is why I want to finish high school.
+	After I finish high school, I want to go to college. I want to go to college for two reasons. The first reason is so I get a degree. I also want to learn more about music so I need to graduate college.
 </p>
-			<p><a href="#">Learn about trust at Airbnb</a></p>
+			
 		  </div>
 	    </div>
 	  </div>
 	</div>
   </body>
 </html>
-
-
