--- a/students/GamboaJ_2014.html
+++ b/students/GamboaJ_2014.html
@@ -27,7 +27,7 @@
     <div class="jumbotron">
       <div class="container">
       <div class="mugshot">
-          <img src="http://1.bp.blogspot.com/-metPBQN2Mxc/T8UJ_oCDN9I/AAAAAAAABwE/hMjjcqPT9tY/s1600/baby+monkey.jpg" height = 200px>
+          <img src="https://dl.dropboxusercontent.com/u/15432916/8Continuation_2014/pics/jessica.png" height = 200px>
         </div>
 		
 		
