--- a/students/studentList.html
+++ b/students/studentList.html
@@ -56,7 +56,7 @@
                 <li><a href="QuintanaA_2014.html">Alexis Quintana</a></li>
                 <li><a href="QuintanaD_2014.html">Derek Quintana</a></li>
                 <li><a href="SanchezA_2014.html">Ashley Sanchez</a></li>
-                <li><a href="TannahillI_2014.html">Isaiah Tannahill</a></li>
+                <li><a href="Tannahill_2014.html">Isaiah Tannahill</a></li>
             </ul>
 			
 		  </div>
