--- a/students/studentList.html
+++ b/students/studentList.html
@@ -45,7 +45,7 @@
             	<li><a href="AlvarezJ_2014.html">Joel Alvarez</a></li>
                 <li><a href="ChambersS_2014.html">Stormy Chambers</a></li>
                 <li><a href="CisnerosA_2014.html">Ayla Cisneros</a></li>
-                <li><a href="ColumbiniA_2014.html">Austin Colombini</a></li>
+                <li><a href="ColombiniA_2014.html">Austin Colombini</a></li>
                 <li><a href="ComposD_2014.html">D'Angelo Compos</a></li>
                 <li><a href="DoradoA_2014.html">Antonino Dorado-Gardea</a></li>
                 <li><a href="DuranD_2014.html">Demetrius Duran</a></li>
