--- a/students/studentList.html
+++ b/students/studentList.html
@@ -42,23 +42,32 @@
 		<div class="row">
 	  	  <div class="col-md-4">
 			<ul>
-            	<li><a href="AlvarezJ_2014.html">Joel Alvarez</a></li>
-                <li><a href="ChambersS_2014.html">Stormy Chambers</a></li>
-                <li><a href="CisnerosA_2014.html">Ayla Cisneros</a></li>
-                <li><a href="ColombiniA_2014.html">Austin Colombini</a></li>
-                <li><a href="ComposD_2014.html">D'Angelo Compos</a></li>
-                <li><a href="DoradoA_2014.html">Antonino Dorado-Gardea</a></li>
-                <li><a href="DuranD_2014.html">Demetrius Duran</a></li>
-                <li><a href="GamboaJ_2014.html">Jessica Gamboa</a></li>
-                <li><a href="MedinaM_2014.html">Mariah Medina</a></li>
-                <li><a href="MendozaJ_2014.html">James Raymond Mendoza</a></li>
-                <li><a href="OzunaA_2014.html">Abraham Ozuna</a></li>
-                <li><a href="QuintanaA_2014.html">Alexis Quintana</a></li>
-                <li><a href="QuintanaD_2014.html">Derek Quintana</a></li>
-                <li><a href="SanchezA_2014.html">Ashley Sanchez</a></li>
-                <li><a href="Tannahill_2014.html">Isaiah Tannahill</a></li>
-            </ul>
-			
+		            	<li><a href="AlvarezJ_2014.html">Joel Alvarez</a></li>
+		                <li><a href="ChambersS_2014.html">Stormy Chambers</a></li>
+		                <li><a href="CisnerosA_2014.html">Ayla Cisneros</a></li>
+		                <li><a href="ColombiniA_2014.html">Austin Colombini</a></li>
+		                <li><a href="ComposD_2014.html">D'Angelo Compos</a></li>
+		                
+
+            		</ul>
+            	</div>
+            	<div class="col-md-4">
+			<ul>
+				<li><a href="DoradoA_2014.html">Antonino Dorado-Gardea</a></li>
+		                <li><a href="DuranD_2014.html">Demetrius Duran</a></li>
+		                <li><a href="GamboaJ_2014.html">Jessica Gamboa</a></li>
+		                <li><a href="MedinaM_2014.html">Mariah Medina</a></li>
+		                <li><a href="MendozaJ_2014.html">James Raymond Mendoza</a></li>
+			</ul>
+		</div>
+		<div class="col-md-4">
+			<ul>
+				<li><a href="OzunaA_2014.html">Abraham Ozuna</a></li>
+		                <li><a href="QuintanaA_2014.html">Alexis Quintana</a></li>
+		                <li><a href="QuintanaD_2014.html">Derek Quintana</a></li>
+		                <li><a href="SanchezA_2014.html">Ashley Sanchez</a></li>
+		                <li><a href="Tannahill_2014.html">Isaiah Tannahill</a></li>
+			</ul>
 		  </div>
 	    </div>
 	  </div>
