--- a/students/studentList.html
+++ b/students/studentList.html
@@ -15,7 +15,7 @@
     <div class="nav">
       <div class="container">
         <ul class="pull-left">
-          <li><a href="#">Continuation Home</a></li>
+          <li><a href="../index.html">Continuation Home</a></li>
           <li><a href="#">Student List</a></li>
         </ul>
         <ul class="pull-right">
@@ -29,11 +29,10 @@
     <div class="jumbotron">
       <div class="container">
       <div class="mugshot">
-          <img src="http://1.bp.blogspot.com/-metPBQN2Mxc/T8UJ_oCDN9I/AAAAAAAABwE/hMjjcqPT9tY/s1600/baby+monkey.jpg" height = 200px>
+          <img src="" height = 200px>
         </div>
-        <h1>Name</h1>
-        <p>One Sentence about your future goal</p>
-        <a href="link to more info">About my future career</a>
+        <h1>Student List</h1>
+        <p>Select the student by name to view their page.</p>
       </div>
     </div> 
 
