--- a/students/studentList.html
+++ b/students/studentList.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -40,14 +39,13 @@
 	  <div class="container">
 		<div class="row">
 	  	  <div class="col-md-4">
+	  	    <br>
 			<ul>
 		            	<li><a href="AlvarezJ_2014.html">Joel Alvarez</a></li>
 		                <li><a href="ChambersS_2014.html">Stormy Chambers</a></li>
 		                <li><a href="CisnerosA_2014.html">Ayla Cisneros</a></li>
 		                <li><a href="ColombiniA_2014.html">Austin Colombini</a></li>
-		                <li><a href="ComposD_2014.html">D'Angelo Compos</a></li>
-		                
-
+		                <li><a href="ComposD_2014.html">D'Angelo Compos</a>
             		</ul>
             	</div>
             	<div class="col-md-4">
