--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <link href="index.css" rel="stylesheet" type="text/css">
     
-    <title>Student List</title>
+    <title>8th Grade Continuation</title>
   </head>
 
   <body>
