--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
       </div>
     </div>
 
-    <div class="Picture">
+    <div class="picture">
       <div class="container">
         <h1>Class of 2018 - 8th Grade Continuation</h1>
+	
+	  <img src="https://dl.dropboxusercontent.com/u/15432916/8Continuation_2014/pics/class8.png">	
 
-   
       </div>
     </div> 
 
