--- a/index.html
+++ b/index.html
@@ -37,16 +37,13 @@
 
     <div class="stuff">
 	  <div class="container">
-		<div class="row">
-	  	  <div class="col-md-4">
-			<h2>Class Colors: Black, Silver, Purple, Blue</h2>
-			<h2>Class Flower:</h2>
-			<h2>Class ______:</h2>
-			
-		  </div>
-	    </div>
+		<h2>Class Colors: Black, Silver, Purple, Blue</h2>
+		<h2>Class Flower:</h2>
+		<h2>Class ______:</h2>
+
+		<h1><a href="/studentList.html">View Student Pages</a></h1>
 	  </div>
-	</div>
+    </div>
   </body>
 </html>
 
