--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="container">
         <ul class="pull-left">
           <li><a href="#">Continuation Home</a></li>
-          <li><a href="/studentList.html">Student List</a></li>
+          <li><a href="students/studentList.html">Student List</a></li>
         </ul>
         <ul class="pull-right">
           <li><a href="www.centennialschool.net">Centennial Home</a></li>
@@ -40,8 +40,9 @@
 		<h2>Class Colors: Black, Silver, Purple, Blue</h2>
 		<h2>Class Flower:</h2>
 		<h2>Class ______:</h2>
-
-		<h1><a href="/studentList.html">View Student Pages</a></h1>
+	    <div class="go-to-list">
+		<h1><a href="students/studentList.html">View Student Pages</a></h1>
+	    </div>
 	  </div>
     </div>
   </body>
