--- a/students/SanchezA_2014.html
+++ b/students/SanchezA_2014.html
@@ -32,9 +32,8 @@
 	  
 	  
         <h1>Ashley Sanchez</h1>
-        <p>I want to be a policemen</p>
+        <p>When I grow up, I want to be a police officer</p>
 </p>
-        <a href="#">Learn More</a>
       </div>
     </div> 
 
@@ -42,20 +41,14 @@
 	  <div class="container">
 		<div class="row">
 	  	  <div class="col-md-4">
-			<h3 Family</h3>
-			<p>My family always stays busy  working with friends.Then we always have fun with friends.Then my family </p>
-			<p><a href="#">See how to travel on Airbnb</a></p>
-		  </div>
-		  <div class="col-md-4">
 			<h3>Family</h3>
-			<p>My Family is always busy working with friends. .</p>
-			<p><a href="#">Learn more about hosting</a></p>
-	      </div>
-		  <div class="col-md-4">sometimes go to the 
-			<h3>Trust and Safety</h3>
-			<p>From Verified ID to our worldwide customer support team, we've got your back.</p>
-			<p><a href="#">Learn about trust at Airbnb</a></p>
+			<p>My family always stays busy working with friends.  We also have fun with friends and often go to the mountains.</p>
 		  </div>
+	  	  <div class="col-md-4">
+			<h3>Future</h3>
+			<p>To become a police officer, I will need to work hard and graduate high school.</p>
+		  </div>
+
 	    </div>
 	  </div>
 	</div>
