--- a/students/DuranD_2014.html
+++ b/students/DuranD_2014.html
@@ -31,9 +31,8 @@
         </div>
 		
 		
-        <h1>Name</h1>
-        <p>One Sentence about your future goal</p>
-        <a href="link to more info">About my future career</a>
+        <h1>Demetrius Duran</h1>
+        <p> </p>
       </div>
     </div> 
 
@@ -43,17 +42,17 @@
 	  	  <div class="col-md-4">
 			<h3>Interest</h3>
 			<p>Some of my interest are computer programing, wrestling, video games, and lifting</p>
-			<p><a href="#">See how to travel on Airbnb</a></p>
+
 		  </div>
 		  <div class="col-md-4">
 			<h3>Success Path</h3>
 			<p>Ill take classes for computer science and take them then graduate high school.Then Ill graduate college then use what I learned is school for computer science and my future career. </p>
-			<p><a href="#">Learn more about hosting</a></p>
+
 	      </div>
 		  <div class="col-md-4">
 			<h3>Family</h3>
 			<p>My dad </p>
-			<p><a href="#">Learn about trust at Airbnb</a></p>
+
 		  </div>
 	    </div>
 	  </div>
