--- a/index.html
+++ b/index.html
@@ -37,8 +37,18 @@
 
     <div class="stuff">
 	  <div class="container">
+	  	<h1>Officers</h1>
+	  		<p><h3>President:</h3> Mariah Medina</p>
+	  		<p><h3>Vice-President:</h3> Derek Quintana</p>
+	  		<p><h3>Treasurer:</h3> Jessica Gamboa</p>
+	  		<p><h3>Secratary:</h3> Ayla Cisneros</p>
+	  		<p><h3>Class Representatives:</h3>Abraham Ozuna & Alexis Quintana</p>
+	  		<br>
+	  		<p><h4>Sponsor:</h4>Robert Quintana</p>
+	  		<p><h4>Parent Sponsor:</h4> Roberta Quintana</p>
 		<h2>Class Colors: Black, Silver, Purple, Blue</h2>
 		<h2>Class Flower:</h2>
+		<p>White Rose</p>
 		<h2>Class ______:</h2>
 	    <div class="go-to-list">
 		<h1><a href="students/studentList.html">View Student Pages</a></h1>
