--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
     <div class="stuff">
 	  <div class="container">
 	  	<h1>Officers</h1>
-	  		<p><h3>President:</h3> Mariah Medina</p>
-	  		<p><h3>Vice-President:</h3> Derek Quintana</p>
-	  		<p><h3>Treasurer:</h3> Jessica Gamboa</p>
-	  		<p><h3>Secratary:</h3> Ayla Cisneros</p>
-	  		<p><h3>Class Representatives:</h3>Abraham Ozuna & Alexis Quintana</p>
+	  		<h3>President: Mariah Medina</h3>
+	  		<h3>Vice-President: Derek Quintana</h3>
+	  		<h3>Treasurer: Jessica Gamboa</h3>
+	  		<h3>Secratary: Ayla Cisneros</h3>
+	  		<h3>Class Representatives: Abraham Ozuna & Alexis Quintana</h3>
 	  		<br>
-	  		<p><h4>Sponsor:</h4>Robert Quintana</p>
-	  		<p><h4>Parent Sponsor:</h4> Roberta Quintana</p>
+	  		<h4>Sponsor: Robert Quintana</h4>
+	  		<h4>Parent Sponsor: Roberta Quintana</h4>
 		<h2>Class Colors: Black, Silver, Purple, Blue</h2>
 		<h2>Class Flower:</h2>
 		<p>White Rose</p>
