--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
     <div class="stuff">
 	  <div class="container">
 	  	<h1>Officers</h1>
-	  		<h3>President: Mariah Medina</h3>
-	  		<h3>Vice-President: Derek Quintana</h3>
-	  		<h3>Treasurer: Jessica Gamboa</h3>
-	  		<h3>Secratary: Ayla Cisneros</h3>
-	  		<h3>Class Representatives: Abraham Ozuna & Alexis Quintana</h3>
+	  		<h3><b>President:</b> Mariah Medina</h3>
+	  		<h3><b>Vice-President:</b> Derek Quintana</h3>
+	  		<h3><b>Treasurer:</b> Jessica Gamboa</h3>
+	  		<h3><b>Secratary:</b> Ayla Cisneros</h3>
+	  		<h3><b>Class Representatives:</b> Abraham Ozuna & Alexis Quintana</h3>
 	  		<br>
-	  		<h4>Sponsor: Robert Quintana</h4>
-	  		<h4>Parent Sponsor: Roberta Quintana</h4>
+	  		<h4><b>Sponsor:</b> Robert Quintana</h4>
+	  		<h4><b>Parent Sponsor:</b> Roberta Quintana</h4>
 		<h2>Class Colors: Black, Silver, Purple, Blue</h2>
 		<h2>Class Flower:</h2>
 		<p>White Rose</p>
