--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 
     <div class="stuff">
 	  <div class="container">
-	  	<h1>Officers</h1>
+	  	<h2>Quote:</h2>
+	  		<p><i>If you can imagine it, you can achieve it; <br>if you can dream it, you can become it.</i> - William Arthor Ward</p>
+	  	<h2>Officers:</h2>
 	  		<h3><b>President:</b> Mariah Medina</h3>
 	  		<h3><b>Vice-President:</b> Derek Quintana</h3>
 	  		<h3><b>Treasurer:</b> Jessica Gamboa</h3>
@@ -46,10 +48,10 @@
 	  		<br>
 	  		<h4><b>Sponsor:</b> Robert Quintana</h4>
 	  		<h4><b>Parent Sponsor:</b> Roberta Quintana</h4>
-		<h2>Class Colors: Black, Silver, Purple, Blue</h2>
-		<h2>Class Flower:</h2>
-		<p>White Rose</p>
-		<h2>Class ______:</h2>
+	  	
+		<h3><b>Class Colors:</b> Black, Silver, Purple, Blue</h3>
+		<h3><b>Class Flower:</b> White Rose</p>
+		<h3><b>Class Song:</b> <a href:"https://www.youtube.com/watch?v=zQN2Dc5jDYA">Hold Onto the Memories</a></h3>
 	    <div class="go-to-list">
 		<h1><a href="students/studentList.html">View Student Pages</a></h1>
 	    </div>
