--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 
     <div class="stuff">
 	  <div class="container">
-	  	<h2>Quote:</h2>
+	  	<div class="quote">
 	  		<p><i>If you can imagine it, you can achieve it; <br>if you can dream it, you can become it.</i> - William Arthor Ward</p>
+	  	</div>
 	  	<h2>Officers:</h2>
 	  		<h3><b>President:</b> Mariah Medina</h3>
 	  		<h3><b>Vice-President:</b> Derek Quintana</h3>
