--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 	  	<div class="quote">
 	  		<p><i>If you can imagine it, you can achieve it; <br>if you can dream it, you can become it.</i> - William Arthor Ward</p>
 	  	</div>
-	  	<h2>Officers:</h2>
+	  	<h2>Officers</h2>
+	  	  <div class="indent">
 	  		<h3><b>President:</b> Mariah Medina</h3>
 	  		<h3><b>Vice-President:</b> Derek Quintana</h3>
 	  		<h3><b>Treasurer:</b> Jessica Gamboa</h3>
@@ -49,11 +50,15 @@
 	  	<br>
 	  		<h3><b>Sponsor:</b> Robert Quintana</h4>
 	  		<h3><b>Parent Sponsor:</b> Roberta Quintana</h4>
+	  	  </div>
 	  	<br>
 	  	<br>
+	  	<h2>Class information</h2>
+	  	  <div class="indent">
 			<h3><b>Class Colors:</b> Black, Silver, Purple, Blue</h3>
 			<h3><b>Class Flower:</b> White Rose</p>
 			<h3><b>Class Song:</b> <a href:"https://www.youtube.com/watch?v=zQN2Dc5jDYA">Hold Onto the Memories</a></h3>
+	    	  </div>
 	    <div class="go-to-list">
 		<h1><a href="students/studentList.html">View Student Pages</a></h1>
 	    </div>
