--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	  	<div class="quote">
 	  		<p><i>If you can imagine it, you can achieve it; <br>if you can dream it, you can become it.</i> - William Arthor Ward</p>
 	  	</div>
-	  	<h2>Officers</h2>
+	  	<h2><u>Officers</u></h2>
 	  	  <div class="indent">
 	  		<h3><b>President:</b> Mariah Medina</h3>
 	  		<h3><b>Vice-President:</b> Derek Quintana</h3>
@@ -53,7 +53,7 @@
 	  	  </div>
 	  	<br>
 	  	<br>
-	  	<h2>Class information</h2>
+	  	<h2><u>Class information</u></h2>
 	  	  <div class="indent">
 			<h3><b>Class Colors:</b> Black, Silver, Purple, Blue</h3>
 			<h3><b>Class Flower:</b> White Rose</p>
