--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	  		<h3><b>Class Representatives:</b> Abraham Ozuna & Alexis Quintana</h3>
 	  	<br>
 	  		<h3><b>Sponsor:</b> Robert Quintana</h4>
-	  		<h3><b>Parent Sponsor:</b> Roberta Quintana</h4>
+	  		<h3><b>Parent Sponsor:</b> Roberta Romero</h4>
 	  	  </div>
 	  	<br>
 	  	<br>
