--- a/students/DuranD_2014.html
+++ b/students/DuranD_2014.html
@@ -51,7 +51,7 @@
 	      </div>
 		  <div class="col-md-4">
 			<h3>Family</h3>
-			<p>My dad </p>
+			<p>My mom is amazing.  She is always there for me.  My brother Emilio is getting ready to graduate this year.</p>
 
 		  </div>
 	    </div>
